--- a/_includes/themes/dbyll/default.html
+++ b/_includes/themes/dbyll/default.html
@@ -38,9 +38,9 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-            <li class="active"><a href="{% if BASE_PATH %}{{ BASE_PATH }}{% else %}/{% endif %}">Home</a></li>
-            <li><a href="{{ BASE_PATH}}{{ site.JB.categories_path }}">Categories</a></li>
-            <li><a href="{{ BASE_PATH}}{{ site.JB.tags_path }}">Tags</a></li>
+            <li class="active"><a href="{% if BASE_PATH %}{{ BASE_PATH }}{% else %}/{% endif %}">首页</a></li>
+            <li><a href="{{ BASE_PATH}}{{ site.JB.categories_path }}">文章分类</a></li>
+            <li><a href="{{ BASE_PATH}}{{ site.JB.tags_path }}">标签</a></li>
             </ul>
             </div><!-- /.navbar-collapse -->
         </nav>
@@ -51,11 +51,11 @@
              <i class="fa fa-bars"></i>
            </button>
            <ul class="dropdown-menu" role="menu">
-             <li><a href="{% if BASE_PATH %}{{ BASE_PATH }}{% else %}/{% endif %}"><i class="fa fa-home"></i> Home</a></li>
-             <li><a href="{{ BASE_PATH}}{{ site.JB.categories_path }}"><i class="fa fa-folder"></i> Categories</a></li>
-             <li><a href="{{ BASE_PATH}}{{ site.JB.tags_path }}"><i class="fa fa-tags"></i> Tags</a></li>
+             <li><a href="{% if BASE_PATH %}{{ BASE_PATH }}{% else %}/{% endif %}"><i class="fa fa-home"></i> 首页</a></li>
+             <li><a href="{{ BASE_PATH}}{{ site.JB.categories_path }}"><i class="fa fa-folder"></i> 文章分类</a></li>
+             <li><a href="{{ BASE_PATH}}{{ site.JB.tags_path }}"><i class="fa fa-tags"></i> 标签</a></li>
                <li class="divider"></li>
-             <li><a href="#"><i class="fa fa-arrow-up"></i> Top of Page</a></li>
+             <li><a href="#"><i class="fa fa-arrow-up"></i> 返回顶部</a></li>
            </ul>
         </div>
 
