--- a/assets/themes/dbyll/css/style.css
+++ b/assets/themes/dbyll/css/style.css
@@ -54,6 +54,9 @@ article{
 .article_body{
 	margin-top: 20px;
 	margin-bottom: 20px;
+	font-size: 15px;
+	line-height: 1.7;
+	color: #666;
 }
 
 .post-date {
