enhance code style.

--- a/_includes/themes/dbyll/default.html
+++ b/_includes/themes/dbyll/default.html
@@ -74,7 +74,7 @@
 	<script type="text/javascript" src="{{ ASSET_PATH }}/resources/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="{{ ASSET_PATH }}/resources/bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="{{ ASSET_PATH }}/js/app.js"></script>
-    <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?skin=sunburst"></script>
+    <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?skin=sons-of-obsidian"></script>
 	</body>
 
 </html>
