--- a/_includes/themes/dbyll/default.html
+++ b/_includes/themes/dbyll/default.html
@@ -30,7 +30,7 @@
                 </a>
                 {% endif %}
                 <a class="navbar-brand" href="{% if BASE_PATH %}{{ BASE_PATH }}{% else %}/{% endif %}">
-                    <img src="http://www.gravatar.com/avatar/{{site.author.email_md5}}?s=35" class="img-circle" />
+                    <img src="https://avatars1.githubusercontent.com/u/1830518?v=3&s=35" class="img-circle" />
                     {{ site.title }}
                 </a>
             </div>
